...
                    if title != nil || subtitle != nil {
                        VStack(alignment: .leading, spacing: 4) {
                            if let title {
                                Text(title)
                                    .font(.largeTitle)
                                    .bold()
                                    .accessibilityIdentifier("CharacterNames")
                            }
                            
                            if let subtitle {
                                Text(subtitle)
                                    .font(.subheadline)
                                    .accessibilityIdentifier("CharacterSpecies")
...
